[workspace]
resolver = "2"

members = [
  "comfy",
  "comfy-core",
  "comfy-quad",
  "demos/egui-scaling",
  "demos/fun",
]

[profile.dev]
opt-level = 3
[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
# wgpu = { path = "../wgpu/wgpu" }
# wgpu-types = { path = "../wgpu/wgpu-types" }
# egui = { path = "../egui/crates/egui" }
# egui-wgpu = { path = "../egui/crates/egui-wgpu" }
# egui-winit = { path = "../egui/crates/egui-winit" }
# egui_plot = { path = "../egui/crates/egui_plot" }

# egui-macroquad = { path = "../egui-macroquad" }
