[package]
name = "bod"
version = "0.1.0"
edition = "2021"
license = "MIT or Apache"
description = "Pragmatic 2D game framework for Rust"

[features]
default = ["color-backtrace", "quick-exit"]
use-wgpu = []

memory-stats = ["bod-core/memory-stats"]
color-backtrace = []
exit-after-startup = []

demo = []
dev = []
embedded-assets = []
quick-exit = []
ci-release = []

tracy = ["bod-core/tracy", "bod-wgpu/tracy"]
# tracy = ["bod-core/tracy", "blobs/tracy", "bod-wgpu/tracy"]

jemalloc = ["bod-core/jemalloc"]
lua = ["bod-core/lua"]

[dependencies]
bod-wgpu = { path = "../bod-wgpu" }
bod-core = { path = "../bod-core" }
