[package]
name = "comfy-core"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A comfy 2d game engine in Rust."
authors = ["Jakub Arnold <darthdeus@gmail.com>"]
homepage = "https://comfyengine.org/"
repository = "https://github.com/darthdeus/comfy"

[features]
default = ["use-wgpu"]
ci-release = ["file_logger"]

file_logger = ["log4rs", "chrono"]

use-wgpu = ["winit", "egui-winit"]
use-glow = ["sdl2"]
tracy = ["tracy-client"]
jemalloc = ["jemalloc-ctl", "jemallocator"]
memprof = ["tracy"]
lua = ["mlua"]

blobs = ["dep:blobs"]

[dependencies]
arrayvec = "0.7.2"
smallvec = "1.10.0"
tinyvec = "1.6.0"

hecs = "0.10.3"
log4rs = { version = "1.2.0", optional = true, default-features = false, features = [
  "console_appender",
  "file_appender",
] }
chrono = { version = "0.4.23", optional = true }

blobs = { version = "0.2.1", optional = true }

mlua = { version = "0.8.9", features = ["lua54", "vendored"], optional = true }
backtrace = "0.3"

# Few forks with minor tweaks. Crates.io doesn't allow git deps, so these have to be republished.
comfy-color-backtrace = "0.6.0"
comfy-git-version = "0.4.0"
comfy_include_dir = "0.7.3"

glam = { version = "0.24.1" }
egui = "0.22.0"
epaint = "0.22.0"
egui-winit = { version = "0.22.0", optional = true, default-features = false, features = [
] }

num-traits = "0.2.16"

thunderdome = "0.6.0"

jemalloc-ctl = { version = "0.5.0", optional = true }
jemallocator = { version = "0.5.0", optional = true }

tracy-client = { version = "0.16.1", optional = true }

image = { version = "0.24.6", default-features = false, features = [
  "png",
  "jpeg",
] }

itertools = "0.11.0"
bytemuck = { version = "1.13", default-features = false, features = ["derive"] }
anyhow = "1.0.70"
once_cell = "1.17.1"

winit = { version = "0.28", optional = true, default-features = false, features = [
  "x11",
] }

sdl2 = { version = "0.35.2", optional = true }

log = "0.4.17"
env_logger = { version = "0.10.0", default-features = false, features = [
  "auto-color",
  "humantime",
] }

cfg-if = "1.0.0"

inline_tweak = "1.0.8"
rand = "0.8.5"
atomic_refcell = "0.1.10"
simple-easing = "1.0.1"
maplit = "1.0.2"

bimap = "0.6.3"

fs_extra = "1.2"
glob = "0.3"

kira = { version = "0.8.4", default-features = false, features = [
  "cpal",
  "ogg",
  "wav",
] }

anymap = "0.12.1"
crossbeam = "0.8.2"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
nanoserde = "0.1.32"
ordered-float = "3.4.0"
bitflags = "2.4.0"
num-complex = "0.4.3"
pid = "4.0.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
spin_sleep = "1.1.1"
rayon = "1.6.1"
pollster = { version = "0.3.0" }
notify = "6.0.1"
memory-stats = { version = "1.1.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = "0.1"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
  "Document",
  "Window",
  "Element",
  "Storage",
] }
wasm-bindgen = "0.2"
getrandom = { version = "0.2.9", features = ["js"] }
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
