[package]
name = "comfy-glow"
version = "0.1.0"
edition = "2021"

[features]
tracy = []
ci-release = ["sdl2/bundled", "sdl2/static-link"]

[dependencies]
comfy-core = { path = "../comfy-core", features = ["use-glow"] }

# TODO: upgrade
glow = "0.12.1"
egui_glow = "0.23.0"
# sdl2 = { version = "0.35.2", features = [] }
sdl2 = { version = "0.35.2" }

image = { version = "0.24", default-features = false, features = [
  "png",
  "jpeg",
] }

[target.'cfg(target_os = "windows")'.dependencies]
sdl2 = { version = "0.35.2", features = ["bundled", "static-link"] }
[target.'cfg(target_os = "macos")'.dependencies]
sdl2 = { version = "0.35.2", features = ["bundled"] }
