[package]
name = "comfy-ldtk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["dylib"]

[dependencies]
comfy-core = { path = "../comfy-core", version = "0.2.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "6.1.1"
grids = "0.2.3"
