[package]
name = "comfy-ldtk"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "LDTK editor support for the Comfy Engine."
authors = ["Jakub Arnold <darthdeus@gmail.com>"]
homepage = "https://comfyengine.org/"
repository = "https://github.com/darthdeus/comfy"


[features]
default = []
ci-release = []

[lib]
# crate-type = ["dylib"]

[dependencies]
comfy-core = { path = "../comfy-core", version = "0.4.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "6.1.1"
grids = "0.2.3"
