[package]
name = "comfy-wgpu"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A comfy 2d game engine in Rust."
authors = ["Jakub Arnold <darthdeus@gmail.com>"]
homepage = "https://comfyengine.org/"
repository = "https://github.com/darthdeus/comfy"

[features]
default = []

ci-release = []
tracy = []

record-pngs = ["dep:futures-intrusive"]

[dependencies]
comfy-core = { path = "../comfy-core", version = "0.2.0" }

wgpu = { version = "0.17.1", features = ["expose-ids"] }
wgpu-types = "0.17.0"
winit = { version = "0.28.3", default-features = false, features = ["x11"] }
naga = { version = "0.13.0", features = ["wgsl-in"] }

fontdue = "0.7.3"
etagere = "0.2.10"

egui = "0.23.0"
egui-wgpu = "0.23.0"
egui-winit = { version = "0.23.0", default-features = false, features = [] }

image = { version = "0.24", default-features = false, features = [
  "png",
  "jpeg",
] }

bytemuck = { version = "1.12", default-features = false, features = ["derive"] }
futures-intrusive = { version = "0.5.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "0.17.1", features = ["webgl"] }
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
