[package]
name = "comfy-wgpu"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A comfy 2d game engine in Rust."
authors = ["Jakub Arnold <darthdeus@gmail.com>"]
homepage = "https://comfyengine.org/"
repository = "https://github.com/darthdeus/comfy"

[features]
default = []

ci-release = []
tracy = []
record-pngs = []

[dependencies]
comfy-core = { path = "../comfy-core", version = "0.3.0" }

wgpu = { version = "0.19.3" }
wgpu-types = "0.19.2"
winit = { version = "0.29.13", default-features = false, features = ["x11"] }
naga = { version = "0.19.2", features = ["wgsl-in"] }

egui = "0.26.2"
egui-wgpu = "0.26.2"
egui-winit = { version = "0.26.2", default-features = false, features = [] }

image = { version = "0.24", default-features = false, features = [
  "png",
  "jpeg",
] }

bytemuck = { version = "1.12", default-features = false, features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures-intrusive = { version = "0.5.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "0.19.3", features = [
  "webgl",
  "fragile-send-sync-non-atomic-wasm",
] }
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
