[package]
name = "comfy"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A comfy 2d game engine in Rust."
authors = ["Jakub Arnold <darthdeus@gmail.com>"]
homepage = "https://comfyengine.org/"
repository = "https://github.com/darthdeus/comfy"


[features]
default = ["color-backtrace", "quick-exit", "blobs"]
use-wgpu = []

blobs = []

memory-stats = ["comfy-core/memory-stats"]
color-backtrace = []
exit-after-startup = []

demo = []
dev = []
embedded-assets = []
quick-exit = []
ci-release = []

tracy = ["comfy-core/tracy", "comfy-wgpu/tracy"]
# tracy = ["comfy-core/tracy", "blobs/tracy", "comfy-wgpu/tracy"]

jemalloc = ["comfy-core/jemalloc"]
lua = ["comfy-core/lua"]

[dependencies]
comfy-wgpu = { path = "../comfy-wgpu" }
comfy-core = { path = "../comfy-core" }
