[package]
name = "comfy"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A comfy 2d game engine in Rust."
authors = ["Jakub Arnold <darthdeus@gmail.com>"]
homepage = "https://comfyengine.org/"
repository = "https://github.com/darthdeus/comfy"


[features]
default = ["color-backtrace", "quick-exit", "use-wgpu", "exr"]

dev = ["comfy-core/dev"]
blobs = []

memory-stats = ["comfy-core/memory-stats"]
color-backtrace = []
exit-after-startup = []

git-version = ["comfy-core/git-version"]

demo = []
embedded-assets = []
quick-exit = []
ci-release = ["comfy-core/ci-release", "comfy-wgpu/ci-release", "wayland"]

tracy = ["comfy-core/tracy", "comfy-wgpu/tracy"]

jemalloc = ["comfy-core/jemalloc"]
wayland = ["comfy-core/wayland"]

use-wgpu = ["comfy-wgpu"]

ldtk = ["dep:comfy-ldtk"]
exr = ["comfy-core/exr"]

[dependencies]
comfy-wgpu = { path = "../comfy-wgpu", version = "0.3.0", optional = true }
comfy-core = { path = "../comfy-core", version = "0.3.0" }
comfy-ldtk = { path = "../comfy-ldtk", version = "0.1.0", optional = true }

[[example]]
name = "physics"
required-features = ["blobs"]
