[package]
name = "embi-wgpu"
version = "0.1.0"
edition = "2021"

[features]
ci-release = []
tracy = []

[dependencies]
embi-core = { path = "../embi-core", features = ["use-wgpu"] }

wgpu = { version = "0.16.0", features = ["expose-ids"] }
wgpu-types = "0.16.0"
winit = { version = "0.28.3", default-features = false, features = ["x11"] }

egui = "0.22.0"
egui-wgpu = "0.22.0"
egui-winit = { version = "0.22.0", default-features = false, features = [] }

image = { version = "0.24", default-features = false, features = [
  "png",
  "jpeg",
  # "bmp",
  # "webp",
  "qoi",
] }

bytemuck = { version = "1.12", default-features = false, features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "0.16.0", features = ["webgl"] }
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }

